# Laboratory-work-programming

./: 4.cpp  Задача.3.cpp
Лаб.7/: CMakeLists.txt  func.cpp  func.h  main.cpp
